[package]
name = "cipher"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
aead = "0.5"
generic-array = "0.14"
typenum = "1.17"
rsa  = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "pem", "arithmetic"] }
elliptic-curve = { version = "0.13", features = ["sec1", "pkcs8"] }
zeroize = "1.4"
secrecy = "0.8"
rpassword = "7.3"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rocksdb = "0.21"
lazy_static = "1.4"
directories = "5"
chrono = "0.4"

[dev-dependencies]
hex-literal = "0.4"